tests/miniJava/neg/006695_mutation.MiniJava
class java { public static void public int [] java ( ) { return 0 ; } Main ( String [ ] java ) { { } } }
